--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
         "build": "cd server/ && npm run build && cd ../client/ && npm run build",
         "preinstall": "cd server/ && npm install && cd ../client/ && npm install",
         "dev": "run-p dev-server dev-client",
-        "dev-server": "cd server && npm run dev",
-        "dev-client": "cd client && npm run dev"
+        "dev-server": "cd server && npm run start",
+        "dev-client": "cd client && npm run start"
+    },
+    "dependencies": {},
+    "devDependencies": {
+        "npm-run-all": "^4.1.5"
     }
 }
