--- a/server/package.json
+++ b/server/package.json
@@ -21,7 +21,8 @@
     "mongoose": "^6.5.4",
     "passport": "^0.6.0",
     "passport-google-oauth2": "^0.2.0",
-    "passport-google-oauth20": "^2.0.0"
+    "passport-google-oauth20": "^2.0.0",
+    "socket.io": "^4.5.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.19"
