--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 
 # dependencies
 /node_modules
+fly.toml
 
 /client/node_modules
 /client/.pnp
@@ -24,7 +25,6 @@
 /client/npm-debug.log*
 /client/yarn-debug.log*
 /client/yarn-error.log*
-
 
 /server/node_modules
 /server/.env
