--- a/server/package.json
+++ b/server/package.json
@@ -19,10 +19,12 @@
     "express": "^4.18.1",
     "express-session": "^1.17.3",
     "mongoose": "^6.5.4",
+    "multer": "^1.4.5-lts.1",
     "passport": "^0.6.0",
     "passport-google-oauth2": "^0.2.0",
     "passport-google-oauth20": "^2.0.0",
-    "socket.io": "^4.5.2"
+    "socket.io": "^4.5.2",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "nodemon": "^2.0.19"
